force-app/main/default/objects/Demand__c/Demand__c.object-meta.xml
<CustomObject>
    <label>Demand</label>
    <nameField>
        <label>Demand Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>