force-app/main/default/objects/Demand__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <formula>IF(ISBLANK(Due_Date__c), 0, IF(TODAY() &gt; Due_Date__c, TODAY() - Due_Date__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>