force-app/main/default/objects/Demand__c/fields/Demand_Seq__c.field-meta.xml
<CustomField>
    <fullName>Demand_Seq__c</fullName>
    <label>Demand Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>