force-app/main/default/objects/Demand__c/fields/Interest_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrued__c</fullName>
    <label>Interest Accrued</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>