force-app/main/default/objects/Demand__c/fields/Net_Payable__c.field-meta.xml
<CustomField>
    <fullName>Net_Payable__c</fullName>
    <formula>Principal_Amount__c + GST_Amount__c - TDS_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>