force-app/main/default/objects/Demand__c/fields/PDF_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>PDF_Attachment_Id__c</fullName>
    <label>PDF Attachment Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>