force-app/main/default/objects/Demand__c/fields/PDF_Generated__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Generated</label>
    <type>Checkbox</type>
</CustomField>