force-app/main/default/objects/Demand__c/fields/Sent_To_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To Buyer</label>
    <type>Checkbox</type>
</CustomField>