force-app/main/default/objects/Demand__c/fields/Total_Gross__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross__c</fullName>
    <formula>Principal_Amount__c + GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>